# EMS-OPG

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: config.json
database/: ems_opg.db
docs/: 01_Project_Overview.md  02_System_Architechture.md  03_Development_Standards.md  04_Project_Structure.md  05_Database_Design.md  06_UI_UX_Guidelines.md  07_Config_System_Design.md  07_Security.md  08_Logging.md  09_Backup_and_Recovery.md  10_Testing_Strategy.md  11_Deployment.md  12_Git_Workflow.md  13_Coding_Standards.md  14_API_and_Interfaces.md  15_Release_Process.md  16_Readmap.md  20_Development_Env_Setup.md  21_Test_Instructions.md  22_User_Manual.md  30_Database_Initialization.md  31_Test_Workflow.md  32_Action_Plan.md
scripts/: load_database.py  mac_addresses.csv  makeCSV.py  makeQR.py
src/ems_opg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ems_opg/app_logging/: logger.py
src/ems_opg/config/: config_manager.py
src/ems_opg/core/: application.py  constants.py  environment.py  exceptions.py  paths.py  paths_manager.py  shutdown.py  startup.py  version.py
src/ems_opg/database/: database.py  engine.py  models.py  (+2 more)
tests/: conftest.py
tests/integration/: config_manager_verification.py  config_verification.py  conftest.py  logging_verification.py  paths_verification.py  test_audit_log.py  test_config.py  test_constraints.py  test_database.py  test_devices.py  test_logging.py  test_mac_importer.py  test_orders.py  test_paths.py  test_relationships.py
tests/performance/: barcodeTest.py
tests/unit/: test_init_db.py
(+8 files in other folders)
